# smart-trim

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/orchestration/: registry.json
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  activeContext.md  agent-sessions.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  agent-sessions.md  code-map.md  foreign-sessions.md  session-handoffs.md
.memory-bank/topics/archive/: foreign-sessions-2026-07-15.md  session-handoffs-2026-07-15.md
docs/plans/: 2026-07-12-001-fix-harden-precompact-recovery-paths-plan.md  2026-07-17-ecosystem-audit-and-hardening-plan.md  2026-07-17-ecosystem-completion-plan.md  2026-07-23-autonomous-runtime-hardening.md
harness-shim/: README.md  smart-trim.py
src/smart_trim/: __init__.py  __main__.py
src/smart_trim/features/: __init__.py
src/smart_trim/features/capabilities/: __init__.py  command.py
src/smart_trim/features/diagnostics/: __init__.py  command.py  wiring.py
src/smart_trim/features/fallback/: __init__.py  command.py
src/smart_trim/features/grounding/: __init__.py  command.py
src/smart_trim/features/hygiene/: __init__.py  command.py
src/smart_trim/features/observability/: __init__.py  command.py
src/smart_trim/features/precompact/: __init__.py  command.py  policy.py
src/smart_trim/features/session/: __init__.py  command.py  content.py
src/smart_trim/features/summarize/: __init__.py  command.py
src/smart_trim/features/writer/: __init__.py  active.py  command.py
src/smart_trim/shared/: __init__.py  compat.py  config.py  filelock.py  ollama.py  paths.py  timeutil.py
tests/: _helpers.py  conftest.py  test_capabilities.py  test_diagnostics.py  test_diagnostics_wiring.py  test_fallback.py  test_filelock.py  test_grounding.py  test_hygiene.py  test_layout.py  test_observability.py  test_precompact.py  test_precompact_cli.py  test_precompact_grounding.py  test_precompact_handler.py  test_precompact_tiers.py  test_session.py  test_shared.py  test_summarize.py  test_writer.py  test_writer_compact.py  test_writer_render.py  test_writer_routing.py  test_writer_safety.py  test_writer_update.py
