[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smart-trim"
version = "3.3.0"
description = "LLM-powered PreCompact context-compression hook for Claude Code (Ollama-local, cloud fallback)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "hook", "precompact", "ollama", "context-compression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: General",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

# NOTE: no [project.scripts] — smart-trim is a HOOK invoked as
# `python3 ~/.claude/hooks/smart-trim.py` (a thin shim that imports this
# package), NOT a CLI console script. The shim preserves the wired path so
# settings.json and the Gemini symlink keep resolving untouched.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; cohesion > wrapping

[tool.hatch.build.targets.wheel]
packages = ["src/smart_trim"]

[tool.mypy]
ignore_missing_imports = true

