[build-system]
requires = ["hatchling>=1.26"]  # 1.26+ for PEP 639 SPDX license expressions
build-backend = "hatchling.build"

[project]
name = "smart-trim"
version = "3.4.1"
description = "LLM-powered PreCompact context-compression hook for Claude Code (Ollama-local, cloud fallback)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"  # SPDX expression (PEP 639)
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "hook", "precompact", "ollama", "context-compression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: General",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/heldigard/smart-trim"
Repository = "https://github.com/heldigard/smart-trim"
Issues = "https://github.com/heldigard/smart-trim/issues"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

# `test` is the CI gate; `dev` adds mypy so a contributor who wants to
# validate types locally doesn't have to install it separately.

[project.scripts]
smart-trim = "smart_trim.features.precompact.command:main"

# The hook path remains wired via `python3 ~/.claude/hooks/smart-trim.py`.
# The console script makes the graduated package directly callable too.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = ["error"]

# Coverage config lets CI run a bare `pytest --cov` (source + gate live here).
[tool.coverage.run]
source = ["smart_trim"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
precision = 1

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # import sorting
  "UP",            # pyupgrade
  "B",             # flake8-bugbear
  "RUF",           # ruff-specific (incl. RUF100 obsolete-noqa, RUF059 test chain)
  "SIM",           # flake8-simplify
  "C4",            # flake8-comprehensions
  "PTH",           # flake8-use-pathlib
  "RET",           # flake8-return
  "PIE",           # flake8-pie
  "TID",           # flake8-tidy-imports
]
ignore = ["E501"]  # line length handled by formatter; cohesion > wrapping
# `×` is used deliberately for math/dimension notation in observability docstrings.
allowed-confusables = ["×"]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_trim"]

[tool.mypy]
ignore_missing_imports = true
# Global-only flags (mypy rejects them in per-module overrides).
warn_unused_configs = true
warn_redundant_casts = true

# Hardened checks, scoped to the package source (the CI gate runs `mypy src`).
# Tests are intentionally not held to full-annotation rules: they lean on
# untyped pytest fixtures and monkeypatch lambdas, and they reach into
# `_`-prefixed internals, so `no_implicit_reexport` stays off.
[[tool.mypy.overrides]]
module = "smart_trim.*"
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.vulture]
# Test monkeypatch lambdas intentionally accept unused *args/**kwargs.
exclude = ["tests/"]
